--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,4 +1,11 @@
+defusedxml==0.4.1
 Django==1.8.6
+django-allauth==0.24.1
 django-jet==0.1.4
+django-widget-tweaks==1.4.1
 feedparser==5.2.1
+oauthlib==1.0.3
+python3-openid==3.0.9
+requests==2.9.1
+requests-oauthlib==0.6.1
 wheel==0.29.0
