--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,8 +2,8 @@
   "name": "Senseira",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "^0.5.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-uglify": "^0.11.1",
