--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,9 @@
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-less": "~0.6.4",
     "grunt-contrib-uglify": "^0.11.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha": "~0.4.6",
+    "mocha": "~1.14.0",
+    "chai": "~1.8.1"
   }
 }
